# custom_server

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  httpd.conf
cmd/: main.cpp
config/: nginx.conf
internal/http/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
internal/server/: Server.cpp  Server.h
internal/tools/: Config.cpp  Config.h  FileManager.cpp  FileManager.h
